install(FILES BistableRulkovMapModel.h HodgkinHuxleyModel.h
	      RulkovMapModel.h FerdoMapModel.h MatsuokaModel.h
	      SimpleOscillatorModel.h HindmarshRoseModel.h RowatSelverstonModel.h
	      DiffusionSynapsisModel.h #DiscreteDiffusionSynapsisModel.h
	      IzhikevichModel.h GradualActivationSynapsisModel.h VavoulisModel.h
	      DESTINATION ${PROJECT_NAME}/${PROJECT_VERSION})
